RESOLVED FIXED 75087
[Qt] REGRESSION(r103467): It broke fast/images/animated-gif-restored-from-bfcache.html
https://bugs.webkit.org/show_bug.cgi?id=75087
Summary [Qt] REGRESSION(r103467): It broke fast/images/animated-gif-restored-from-bfc...
Csaba Osztrogonác
Reported 2011-12-22 07:22:04 PST
--- /home/webkitbuildbot/slaves/release32bit-qt5/buildslave/qt-linux-32-release-qt5/build/layout-test-results/fast/images/animated-gif-restored-from-bfcache-expected.txt +++ /home/webkitbuildbot/slaves/release32bit-qt5/buildslave/qt-linux-32-release-qt5/build/layout-test-results/fast/images/animated-gif-restored-from-bfcache-actual.txt @@ -1,5 +1,5 @@ Test that animated GIFs resume animating after restoring a page from the back forward cache. To test manually, click here to visit about:blank, then press the browser's back button. On success, you should see a square that continuously animates through various shades of green followed by the word 'PASS'. -PASS +FAIL
Attachments
Patch (2.57 KB, patch)
2011-12-22 08:48 PST, Pierre Rossi
no flags
Csaba Osztrogonác
Comment 1 2011-12-22 07:24:47 PST
I skipped it to make buildbot happier: http://trac.webkit.org/changeset/103542 Please unskip it in the proper fix.
Pierre Rossi
Comment 2 2011-12-22 08:39:52 PST
Thanks Ossy !
Pierre Rossi
Comment 3 2011-12-22 08:48:59 PST
Created attachment 120325 [details] Patch Maybe having a ms resolution for things that need to be millisecond-accurate was not such a good idea.
WebKit Review Bot
Comment 4 2011-12-23 00:32:22 PST
Comment on attachment 120325 [details] Patch Clearing flags on attachment: 120325 Committed r103610: <http://trac.webkit.org/changeset/103610>
WebKit Review Bot
Comment 5 2011-12-23 00:32:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.