[Qt] REGRESSION(r103467): It broke fast/images/animated-gif-restored-from-bfcache.html https://bugs.webkit.org/show_bug.cgi?id=75087

Source/JavaScriptCore:

monotonicallyIncreasingTime needs to hava a higher resolution than milliseconds.

Reviewed by Darin Adler.

* wtf/CurrentTime.cpp:
(WTF::monotonicallyIncreasingTime):

LayoutTests:

Unskipping the offending test.

Reviewed by Darin Adler.

* platform/qt/Skipped:


Canonical link: https://commits.webkit.org/91915@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103610 268f45cc-cd09-0410-ab3c-d52691b4dbfc